[package]
name = "recallmon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aws-sdk-s3 = "0.36.0"
thiserror = "1"
rkyv = { version = "0.7", default-features = false, features = ["alloc"] }
async-stream = "0.3"
uuid = { version = "1", features = ["v4"] }
