[package]
name = "recallmon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
axum-server = "0.7.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aws-config = "1.6.3"
anyhow = "1"
rkyv = { version = "0.7", default-features = false, features = [
  "alloc",
  "validation",
  "bytecheck",
  "size_64",
] }
async-stream = "0.3"
uuid = { version = "1", features = ["v4"] }
futures-core = "0.3.5"
tracing-subscriber = "0.3.19"
aws-sdk-s3 = "1.90.0"
